// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomTabBar renders the child variant 1`] = `
<View
  accessibilityRole="tablist"
  style={
    [
      {
        "alignItems": "stretch",
        "backgroundColor": "#FFFFFF",
        "borderTopColor": "#EDE0D1",
        "borderTopWidth": 0.5,
        "flexDirection": "row",
        "paddingHorizontal": 8,
        "paddingTop": 8,
      },
      {
        "borderTopLeftRadius": 24,
        "borderTopRightRadius": 24,
        "borderTopWidth": 0,
        "elevation": 8,
        "shadowColor": "#402A1A",
        "shadowOffset": {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.13,
        "shadowRadius": 22,
      },
      {
        "paddingBottom": 34,
      },
    ]
  }
>
  <View
    accessibilityLabel="Play"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "minHeight": 44,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#FFEDE7",
          },
        ]
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#B54C35",
                "fontSize": 26,
              },
              undefined,
              {
                "fontFamily": "Feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#6B6058",
              "fontFamily": "Nunito-Regular",
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "color": "#B54C35",
            },
          ]
        }
      >
        Play
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Report, Locked"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "minHeight": 44,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          false,
        ]
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#6B6058",
                "fontSize": 26,
              },
              undefined,
              {
                "fontFamily": "Feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          
        </Text>
        <View
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 999,
              "bottom": -4,
              "position": "absolute",
              "right": -8,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#6B6058",
                  "fontSize": 10,
                },
                undefined,
                {
                  "fontFamily": "Feather",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#6B6058",
              "fontFamily": "Nunito-Regular",
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "color": "#6B6058",
            },
          ]
        }
      >
        Report
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Parent"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "minHeight": 44,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          false,
        ]
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#6B6058",
                "fontSize": 26,
              },
              undefined,
              {
                "fontFamily": "Feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#6B6058",
              "fontFamily": "Nunito-Regular",
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "color": "#6B6058",
            },
          ]
        }
      >
        Parent
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Support"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "minHeight": 44,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          false,
        ]
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#6B6058",
                "fontSize": 26,
              },
              undefined,
              {
                "fontFamily": "Feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#6B6058",
              "fontFamily": "Nunito-Regular",
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "color": "#6B6058",
            },
          ]
        }
      >
        Support
      </Text>
    </View>
  </View>
</View>
`;

exports[`BottomTabBar renders the parent variant 1`] = `
<View
  accessibilityRole="tablist"
  style={
    [
      {
        "alignItems": "stretch",
        "backgroundColor": "#FFFFFF",
        "borderTopColor": "#EDE0D1",
        "borderTopWidth": 0.5,
        "flexDirection": "row",
        "paddingHorizontal": 8,
        "paddingTop": 8,
      },
      false,
      {
        "paddingBottom": 34,
      },
    ]
  }
>
  <View
    accessibilityLabel="Add"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "minHeight": 44,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          false,
        ]
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#6B6058",
                "fontSize": 22,
              },
              undefined,
              {
                "fontFamily": "Feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#6B6058",
              "fontFamily": "Nunito-Regular",
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "color": "#6B6058",
            },
          ]
        }
      >
        Add
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="All Children"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "minHeight": 44,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          false,
        ]
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#B54C35",
                "fontSize": 22,
              },
              undefined,
              {
                "fontFamily": "Feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#6B6058",
              "fontFamily": "Nunito-Regular",
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "color": "#B54C35",
            },
          ]
        }
      >
        All Children
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Parent"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "minHeight": 44,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          false,
        ]
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#6B6058",
                "fontSize": 22,
              },
              undefined,
              {
                "fontFamily": "Feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#6B6058",
              "fontFamily": "Nunito-Regular",
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "color": "#6B6058",
            },
          ]
        }
      >
        Parent
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Support"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "minHeight": 44,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 999,
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          false,
        ]
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#6B6058",
                "fontSize": 22,
              },
              undefined,
              {
                "fontFamily": "Feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#6B6058",
              "fontFamily": "Nunito-Regular",
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "color": "#6B6058",
            },
          ]
        }
      >
        Support
      </Text>
    </View>
  </View>
</View>
`;
